rails generate venus:bootstrap!

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,5 +16,13 @@
  *= require jquery.timepicker
 
  *= require chosen
+
+ *= require twitter/bootstrap
+ *= require twitter/bootstrap-responsive
+ *= require unicorn.main
+ *= require unicorn.grey
+
+
+
  *= require_self
  */
