--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -3,14 +3,14 @@
 <head>
   <title>Unicorn Admin</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <%= stylesheet_link_tag    "application" %>
-  <%= javascript_include_tag "application" %>
+  <%= stylesheet_link_tag    "admin" %>
+  <%= javascript_include_tag "admin" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
   <div id="header">
-    <h1><%= link_to "Unicorn Admin", root_path %></h1>   
+    <h1><%= link_to "Unicorn Admin", admin_root_path %></h1>   
   </div>
 
   <div id="user-nav" class="navbar navbar-inverse">
