rails g bootstrap:install and replace twitter/bootstrap and twitter/bootstrap-responsive with bootstrap_and_overrides!

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,12 +17,11 @@
 
  *= require chosen
 
- *= require twitter/bootstrap
- *= require twitter/bootstrap-responsive
  *= require unicorn.main
  *= require unicorn.grey
 
 
 
  *= require_self
+ *= require bootstrap_and_overrides
  */
