--- a/app/assets/stylesheets/admin.css
+++ b/app/assets/stylesheets/admin.css
@@ -16,9 +16,7 @@
  *= require jquery.timepicker
 
  *= require chosen
-
- *= require twitter/bootstrap
- *= require twitter/bootstrap-responsive
+ *= require bootstrap_and_overrides
  *= require unicorn.main
  *= require unicorn.grey
 
