--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -69,8 +69,7 @@
       </div>
     </div>
     <div id="breadcrumb">
-      <a href="#">Home</a>
-      <a href="#">Page</a>
+      <%= render_crumbs :separator => "" %>
     </div>
     <div class="container-fluid">
       <div class="row-fluid">
