--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Unicorn Admin</title>
+  <title>繁體中文推廣網站</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <%= stylesheet_link_tag    "admin" %>
   <%= javascript_include_tag "admin" %>
@@ -10,7 +10,7 @@
 <body>
 
   <div id="header">
-    <h1><%= link_to "Unicorn Admin", admin_root_path %></h1>   
+    <h1><%= link_to "繁體中文推廣網站", admin_root_path %></h1>   
   </div>
 
   <div id="user-nav" class="navbar navbar-inverse">
@@ -34,38 +34,14 @@
   </div>
 
   <div id="sidebar">
-    <%= link_to "#", :class => 'visible-phone' do %>
-      <i class="icon icon-user"></i>
-      <span>Sidebar Menu</span>
-    <% end %>
-    <ul>
-      <li>
-        <%= link_to "#" do %>
-          <i class="icon icon-star"></i>
-          <span>Sidebar Menu Link #1</span>
-        <% end %>
-      </li>
-      <li class="active">
-        <%= link_to "#" do %>
-          <i class="icon icon-user"></i>
-          <span>Sidebar Menu Link #2</span>
-        <% end %>
-      </li>
-      <li>
-        <%= link_to "#" do %>
-          <i class="icon icon-tag"></i>
-          <span>Sidebar Menu Link #3</span>
-        <% end %>
-      </li>
-    </ul>
+    <%= render :partial => "admin/common/sidebar" if user_signed_in? %>
   </div>
 
   <div id="content">
     <div id="content-header">
-      <h1>Page Title</h1>
+      <h1><%= @page_title %></h1>
       <div class="btn-group">
-        <a href="#" class="btn btn-primary">Buttons#1</a>
-        <a href="#" class="btn btn-primary">Buttons#2</a>
+        <%= yield :bts %>
       </div>
     </div>
     <div id="breadcrumb">
