--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -14,23 +14,7 @@
   </div>
 
   <div id="user-nav" class="navbar navbar-inverse">
-    <ul class="nav btn-group">
-      <li class="btn btn-inverse">
-        <%= link_to("#") do %>
-          <i class="icon icon-user"></i>
-          <span class="text">Setting</span>
-        <% end %>
-      </li>
-      <li class="btn btn-inverse">
-        <%= link_to("#", :method => :delete) do %>
-          <i class="icon icon-share-alt"></i>
-          <span class="text">Logout</span>
-        <% end %>
-      </li>
-      <li class="btn btn-inverse">
-        <%= link_to "Login", "#" %>
-      </li>
-    </ul>
+    <%= render :partial => "admin/common/user_nav" %>
   </div>
 
   <div id="sidebar">
