setup for simple_form wrappers :admin and add class to new and edit template!

--- a/app/views/admin/sixbooks/new.html.erb
+++ b/app/views/admin/sixbooks/new.html.erb
@@ -1,3 +1,7 @@
-<%= simple_form_for @sixbook, :url => admin_sixbooks_path, :method => :post do |s| %>
-  <%= render :partial => 'form', :locals => { :f => s } %>
-<% end %>
+<div class="widget-box">
+  <div class="widget-content nopadding">
+    <%= simple_form_for @sixbook, :url => admin_sixbooks_path, :method => :post, :wrapper => :admin do |s| %>
+      <%= render :partial => 'form', :locals => { :f => s } %>
+    <% end %>
+  </div>
+</div>
