--- a/app/views/admin/sixbooks/edit.html.erb
+++ b/app/views/admin/sixbooks/edit.html.erb
@@ -1,3 +1,8 @@
-<%= simple_form_for @sixbook, :url => admin_sixbook_path(@sixbook), :method => :put do |s| %>
-  <%= render :partial => 'form', :locals => { :f => s } %>
-<% end %>
+
+<div class="widget-box">
+  <div class="widget-content nopadding">
+    <%= simple_form_for @sixbook, :url => admin_sixbook_path(@sixbook), :method => :put, :wrapper => :admin do |s| %>
+      <%= render :partial => 'form', :locals => { :f => s } %>
+    <% end %>
+  </div>
+</div>
