--- a/app/views/admin/sixbooks/_form.html.erb
+++ b/app/views/admin/sixbooks/_form.html.erb
@@ -1,20 +1,26 @@
 <div class="form-inputs">
   <% if @sixbook.image? %>
-    <%= image_tag @sixbook.image, size: '120x120' %>
+    <%= image_tag @sixbook.image, size: '300x300' %>
   <% else %>
-    <%= image_tag @sixbook.image.default_url, size: '120x120' %>
+    <%= image_tag @sixbook.image.default_url, size: '300x300' %>
   <% end %>
   <% if @sixbook.file? %>
-    <%= image_tag @sixbook.file, size: '120x120' %>
+    <embed src="<%= asset_path(@sixbook.file) %>" height="300" width="300"/>
   <% else %>
-    <%= image_tag @sixbook.file.default_url, size: '120x120' %>
+    <%= image_tag @sixbook.file.default_url, size: '300x300' %>
   <% end %>
   <%= f.input :word, :label =>"字名", :as => :string, :input_html => { :maxlength => 12 } %>
   <%= f.input :six_cat_id, :label => "六書分類" , :as => :select, :collection => collection_for_six_category %>
   <%= f.input :dic_id, :label => "字典" , :as => :select, :collection => collection_for_dictionary_word %>
   <%= f.input :meaning , :input_html => { :maxlength => 400 }, :label => "解釋", :as => :text %>
   <%= f.input :image, :label => "六書圖片", :as => :file %>
+  <% if @sixbook.image? %>
+    <%= f.input :remove_image, :label => "刪除圖片", :as => :boolean %>
+  <% end %>
   <%= f.input :file, :label => "六書動畫", :as => :file %>
+  <% if @sixbook.file? %>
+    <%= f.input :remove_file, :label => "刪除動畫", :as => :boolean %>
+  <% end %>
 </div>
 
 <div class="form-actions" style="text-align:center">
