--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -18,7 +18,7 @@
   </div>
 
   <div id="sidebar">
-    <%= render :partial => "admin/common/sidebar" if user_signed_in? %>
+    <%= render :partial => "admin/common/sidebar" %>
   </div>
 
   <div id="content">
