edit for views/admin/sixbook_categories/index, edit, and _form and set for permitted_params!

--- a/app/views/admin/common/_sidebar.html.erb
+++ b/app/views/admin/common/_sidebar.html.erb
@@ -9,4 +9,10 @@
       <span>六書列表</span>
     <% end %>
   </li>
+  <li>
+    <%= link_to admin_sixbook_categories_path do %>
+      <i class="icon icon-star"></i>
+      <span>六書分類列表</span>
+    <% end %>
+  </li>
 </ul>
