finish for locations views and model setting!

--- a/app/views/admin/common/_sidebar.html.erb
+++ b/app/views/admin/common/_sidebar.html.erb
@@ -15,4 +15,10 @@
       <span>六書分類列表</span>
     <% end %>
   </li>
+  <li>
+    <%= link_to admin_locations_path do %>
+      <i class="icon icon-star"></i>
+      <span>地點列表</span>
+    <% end %>
+  </li>
 </ul>
