edit for artist routes, siderbar, and permitted_params!

--- a/app/views/admin/common/_sidebar.html.erb
+++ b/app/views/admin/common/_sidebar.html.erb
@@ -21,4 +21,10 @@
       <span>地點列表</span>
     <% end %>
   </li>
+  <li>
+    <%= link_to admin_artists_path do %>
+      <i class="icon icon-star"></i>
+      <span>文人列表</span>
+    <% end %>
+  </li>
 </ul>
