--- a/app/views/admin/sixbooks/_form.html.erb
+++ b/app/views/admin/sixbooks/_form.html.erb
@@ -10,8 +10,8 @@
     <%= image_tag @sixbook.file.default_url, size: '300x300' %>
   <% end %>
   <%= f.input :word, :label =>"字名", :as => :string, :input_html => { :maxlength => 12 } %>
-  <%= f.input :six_cat_id, :label => "六書分類" , :as => :select, :collection => collection_for_six_category %>
-  <%= f.input :dic_id, :label => "字典" , :as => :select, :collection => collection_for_dictionary_word %>
+  <%= f.input :six_cat_id, :label => "六書分類" , :as => :select, :collection => collection_for_six_category, :input_html => { :class => :chosen, :mutiple => false } %>
+  <%= f.input :dic_id, :label => "字典" , :as => :select, :collection => collection_for_dictionary_word, :input_html => { :class => :chosen, :mutiple => false } %>
   <%= f.input :meaning , :input_html => { :maxlength => 400 }, :label => "解釋", :as => :text, input_html: { :rows => 15} %>
   <div class="control-group">
     <div class="span5">
