edit bugs for dictionary controller!

--- a/app/views/admin/common/_sidebar.html.erb
+++ b/app/views/admin/common/_sidebar.html.erb
@@ -4,6 +4,12 @@
 <% end %>
 <ul>
   <li>
+    <%= link_to admin_dictionaries_path do %>
+      <i class="icon icon-star"></i>
+      <span>字典列表</span>
+    <% end %>
+  </li>
+  <li>
     <%= link_to admin_sixbooks_path do %>
       <i class="icon icon-star"></i>
       <span>六書列表</span>
