--- a/app/views/admin/artists/_form.html.erb
+++ b/app/views/admin/artists/_form.html.erb
@@ -6,5 +6,5 @@
 
 <div class="form-actions" style="text-align:center">
   <%= f.submit :value => "送出", :class => "btn btn-primary" %>
-  <%= link_to "取消", admin_sixbook_categories_path, :class => "btn" %>
+  <%= link_to "取消", admin_artists_path, :class => "btn" %>
 </div>
