--- a/app/views/admin/creations/_form.html.erb
+++ b/app/views/admin/creations/_form.html.erb
@@ -7,5 +7,5 @@
 
 <div class="form-actions" style="text-align:center">
   <%= f.submit :value => "送出", :class => "btn btn-primary" %>
-  <%= link_to "取消", admin_sixbook_categories_path, :class => "btn" %>
+  <%= link_to "取消", admin_artist_creations_path(@artist), :class => "btn" %>
 </div>
