--- a/app/views/admin/locations/_form.html.erb
+++ b/app/views/admin/locations/_form.html.erb
@@ -4,5 +4,5 @@
 
 <div class="form-actions" style="text-align:center">
   <%= f.submit :value => "送出", :class => "btn btn-primary" %>
-  <%= link_to "取消", admin_sixbook_categories_path, :class => "btn" %>
+  <%= link_to "取消", admin_locations_path, :class => "btn" %>
 </div>
