--- a/app/views/admin/games/edit.html.erb
+++ b/app/views/admin/games/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="widget-box">
   <div class="widget-content nopadding">
-    <%= simple_form_for @game, :url => admin_game_path, :method => :put, :wrapper => :admin do |g| %>
+    <%= simple_form_for @game, :url => admin_dictionary_game_path(@dictionary), :method => :put, :wrapper => :admin do |g| %>
       <%= render :partial => 'form', :locals => { :f => g } %>
     <% end %>
   </div>
