--- a/app/views/admin/games/_form.html.erb
+++ b/app/views/admin/games/_form.html.erb
@@ -1,5 +1,20 @@
 <div class="form-inputs">
-  <%= f.input :file, :label => "遊戲檔案", :as => :file %>
+  <% if @game.file? %>
+    <embed src="<%= asset_path(@game.file) %>" height="300" width="300"/>
+  <% else %>
+    <%= image_tag @game.file.default_url, size: '300x300' %>
+  <% end %>
+  <%= f.input :dic_id, :label => "字", as: :select, collection: collection_for_dictionary_word, disabled: true %>
+  <div class="control-group">
+    <div class="span5">
+      <%= f.input :file, :label => "遊戲檔案", :as => :file %>
+    </div>
+    <% if @game.file? %>
+      <div class="span5">
+        <%= f.input :remove_file, :label => "刪除檔案", :as => :boolean %>  
+      </div>
+    <% end %>
+  </div>
 </div>
 
 <div class="form-actions" style="text-align:center">
