finish for views/admin/options!

--- a/app/views/admin/common/_sidebar.html.erb
+++ b/app/views/admin/common/_sidebar.html.erb
@@ -33,4 +33,10 @@
       <span>文人列表</span>
     <% end %>
   </li>
+  <li>
+  <%= link_to admin_options_path do %>
+      <i class="icon icon-star"></i>
+      <span>題目選項列表</span>
+    <% end %>
+  </li>
 </ul>
