edit CRUD for view/admin/questions!

--- a/app/views/admin/common/_sidebar.html.erb
+++ b/app/views/admin/common/_sidebar.html.erb
@@ -34,7 +34,13 @@
     <% end %>
   </li>
   <li>
-  <%= link_to admin_options_path do %>
+    <%= link_to admin_questions_path do %>
+      <i class="icon icon-star"></i>
+      <span>題目列表</span>
+    <% end %>
+  </li>
+  <li>
+    <%= link_to admin_options_path do %>
       <i class="icon icon-star"></i>
       <span>題目選項列表</span>
     <% end %>
