--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -4,6 +4,7 @@
   <%= f.input :q_class, label: "題目分類", as: :select, collection: Question::QUESTION_CLASS_COLLECTION %>
   <%= f.input :q_item, label: "題目子分類", as: :string %>
   <%= f.input :text, :label =>"內容", :as => :text, input_html: { :rows => 5 } %>
+  <%= render :partial => 'member', :locals => { :form => f } %>
   <%= f.input :note, :label => "註記", :as => :string %>
 </div>
 
