edit for add_to_link ajax second part in views/admin/question/_member!

--- a/app/views/admin/questions/_member.html.erb
+++ b/app/views/admin/questions/_member.html.erb
@@ -4,7 +4,11 @@
     <div id="question_members">
       <%= form.fields_for :members do |m| %>
         <%= m.label :option_class, "選項分類" %>
-        <%= m.input_field :option_class, as: :select, collection: Option::OPTION_CLASS_COLLECTION, :option_select => true %>      
+        <% if m.object.new_record? %>
+          <%= m.input_field :option_class, as: :select, collection: Option::OPTION_CLASS_COLLECTION, :option_select => true %>
+        <% else %>
+          <%= m.input_field :option_class, as: :select, collection: Option::OPTION_CLASS_COLLECTION, :option_selected => true %>
+        <% end %>       
         <%= m.label :option_id, "選項" %>
         <% if m.object.new_record? %>
           <%= m.input_field :option_id, as: :select, collection: collection_for_option_content_id(nil), :class => :chosen %>
