--- a/app/views/admin/questions/index.html.erb
+++ b/app/views/admin/questions/index.html.erb
@@ -25,7 +25,7 @@
                 <td><%= question.q_type %></td>
                 <td><%= render_question_class(question) %></td>
                 <td><%= question.q_item %></td>
-                <td><%= question.ans %></td>
+                <td><%= render_question_answers(question) %></td>
                 <td><%= question.note %></td>
                 <td rowspan="2">
                   <%= link_to "編輯", edit_admin_question_path(question), :class => "btn btn-mini" %>
