--- a/app/views/admin/questions/_option.html.erb
+++ b/app/views/admin/questions/_option.html.erb
@@ -6,8 +6,11 @@
           <% if o.object.new_record? %>
             <%= o.label :o_class, "選項分類" %>
             <%= o.input_field :o_class, as: :select, collection: Option::OPTION_CLASS_COLLECTION %>
+            <%= o.label :option_code, "選項代號" %>
+            <%= o.input_field :option_code, as: :string %>
             <%= o.label :content, "選項內容" %>
             <%= o.input_field :content, as: :string %>
+            
             <br>
             <br>
             <%= o.link_to_remove "取消建立", :class => "btn" %>
