rails g devise:views and finish user CRUD and non_devise views!

--- a/app/views/admin/common/_sidebar.html.erb
+++ b/app/views/admin/common/_sidebar.html.erb
@@ -45,4 +45,10 @@
       <span>題目選項列表</span>
     <% end %>
   </li>
+  <li>
+    <%= link_to admin_users_path do %>
+      <i class="icon icon-star"></i>
+      <span>管理者列表</span>
+    <% end %>
+  </li>
 </ul>
