--- a/app/views/admin/common/_user_nav.html.erb
+++ b/app/views/admin/common/_user_nav.html.erb
@@ -1,6 +1,6 @@
 <ul class="nav btn-group">
   <li class="btn btn-inverse">
-    <%= link_to("#") do %>
+    <%= link_to(edit_user_registration_path, method: :get) do %>
       <i class="icon icon-user"></i>
       <span class="text">Setting</span>
     <% end %>
