edit codestyle for last commit!

--- a/app/views/admin/dictionaries/_search.html.erb
+++ b/app/views/admin/dictionaries/_search.html.erb
@@ -17,7 +17,7 @@
               </div>
             </div>
             <div class="control-group row-fluid form-inline">
-              <%= f.label :component_cont_any, "字", :class => 'control-label' %>
+              <%= f.label :component_cont_any, "部首", :class => 'control-label' %>
               <div class='controls'>
                 <%= f.search_field :component_cont_any, class: "search-query" %>
               </div>
