使用ransack的sort－link 字典列表

--- a/app/views/admin/dictionaries/index.html.erb
+++ b/app/views/admin/dictionaries/index.html.erb
@@ -12,7 +12,7 @@
       <table class="table table-hover table-bordered with-check">
           <thead>
             <tr>
-              <th>編號</th>
+              <th><%= sort_link @search, :id %></th>
               <th>字</th>
               <th>六書字</th>
               <th>六書分類</th>
