--- a/app/views/admin/sixbooks/_form.html.erb
+++ b/app/views/admin/sixbooks/_form.html.erb
@@ -1,3 +1,4 @@
+<%= tinymce_assets %>
 <div class="form-inputs">
   <% if @sixbook.image? %>
     <%= image_tag @sixbook.image, size: '300x300' %>
@@ -12,7 +13,7 @@
   <%= f.input :word, :label =>"字名", :as => :string, :input_html => { :maxlength => 12 } %>
   <%= f.input :six_cat_id, :label => "六書分類" , :as => :select, :collection => collection_for_six_category, :input_html => { :class => :chosen, :mutiple => false } %>
   <%= f.input :dic_id, :label => "字典" , :as => :select, :collection => collection_for_dictionary_word, :input_html => { :class => :chosen, :mutiple => false } %>
-  <%= f.input :meaning , :input_html => { :maxlength => 400 }, :label => "解釋", :as => :text, input_html: { :rows => 15} %>
+  <%= f.text_area :meaning, class: 'tinymce', rows: 15  %>
   <div class="control-group">
     <div class="span5">
       <%= f.input :image, :label => "六書圖片", :as => :file %>
